<resources>
    <string name="app_name">Professor Power Ratings</string>
    <string name="results_example">Showing Results For: </string>
    <string name="professorListTag">Professors:</string>
    <string name="difficultyTag">Difficulty:   </string>
    <string name="hoursPerWeekTag">Average Hours Per Week:   </string>
    <string name="textbookTag">Required Textbook:   </string>
    <string name="profSearch">Search By Professor</string>
    <string name="classSearch">Search By Class</string>
    <string name="email_default">Email</string>
    <string name="password_default">Password</string>
    <string name="sign_up_default">SIGN UP</string>
    <string name="sign_in_default">SIGN IN</string>
    <string name="username_default">Username</string>
    <string name="logout_default">Logout</string>
    <string name="password_confirm">Confirm Password</string>

    <string-array name="array_professor">
        <item>Hertz, Matthew</item>
        <item>Blanton, Marina</item>
        <item>Chomicki, Jan</item>
        <item>Dantu, Karthik</item>
        <item>Demirbas, Murat</item>
        <item>Doermann, David</item>
        <item>Dong, Wen</item>
        <item>Gaboardi, Marco</item>
        <item>Gao, Jing</item>
        <item>Gao, Mingchen</item>
        <item>Hartloff, Jesse</item>
        <item>He, Xin</item>
        <item>Hughes, Andrew</item>
        <item>Hunt, Alan</item>
        <item>Jayaraman, Bharat</item>
        <item>Jin, Zhanpeng</item>
    </string-array>

    <string-array name="search_letters">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string-array name="array_professor_rating">
        <item>1/10</item>
        <item>2/10</item>
        <item>3/10</item>
        <item>4/10</item>
        <item>5/10</item>
        <item>6/10</item>
        <item>7/10</item>
        <item>8/10</item>
        <item>9/10</item>
        <item>10/10</item>
        <item>1/10</item>
        <item>2/10</item>
        <item>3/10</item>
        <item>4/10</item>
        <item>5/10</item>
        <item>6/10</item>
    </string-array>

    <string-array name="array_professor_class">
        <item>CSE 115</item>
        <item>CSE 116</item>
        <item>CSE 191</item>
        <item>CSE 421</item>
        <item>CSE 442</item>
        <item>CSE 321</item>
        <item>CSE 314</item>
        <item>CSE 214</item>
        <item>CSE 9</item>
        <item>CSE 10</item>
        <item>CSE 11</item>
        <item>CSE 12</item>
        <item>CSE 13</item>
        <item>CSE 14</item>
        <item>CSE 15</item>
        <item>CSE 16</item>
    </string-array>

    <string-array name="array_professor_comments">
        <item index="0">
            <item index="0"> Good guy 0.\n</item>
            <item index="1"> Alright guy 0.\n</item>
            <item index="2"> Awful guy 0.\n</item>
        </item>
        <item index="1">
            <item index="0"> Good guy 1.</item>
            <item index="1"> Alright guy 1.</item>
            <item index="2"> Awful guy 1.</item>
        </item>
    </string-array>

    <string-array name="class_difficulties">
        <item>Select Option</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Near Impossible</item>
    </string-array>

</resources>
