<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/searchByProfessor"
        android:layout_width="360sp"
        android:layout_height="150sp"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginBottom="24dp"
        android:background="#005bbb"
        android:onClick="profSearch"
        android:text="@string/profSearch"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/searchByClass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchByClass"
        android:layout_width="360sp"
        android:layout_height="150sp"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginBottom="24dp"
        android:background="#005bbb"
        android:onClick="classSearch"
        android:text="@string/classSearch"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/current_user_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchByProfessor" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="114dp"
        android:layout_height="51dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:layout_marginBottom="40dp"
        android:text="@string/logout_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_user_display" />

    <TextView
        android:id="@+id/current_user_display"
        android:layout_width="372dp"
        android:layout_height="29dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/username_default"
        app:layout_constraintBottom_toTopOf="@+id/logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchByClass" />

</android.support.constraint.ConstraintLayout>